--- a/Pitch/Reproducible-Pitch-Presentation.Rmd
+++ b/Pitch/Reproducible-Pitch-Presentation.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Gapminder Data Visualization using Shiny and Plotly"
-author: "Halici"
-date: "18th October 2019"
+title: "Shiny Application and Reproducible Pitch"
+author: "Abdelbasset Boukdir"
+date: "June 08 2020"
 output:
   ioslides_presentation: default
   html_document:
@@ -10,22 +10,19 @@ output:
   slidy_presentation: default
 mode: selfcontained
 job: Reproducible Pitch Presentation
-subtitle: Developing Data Products Course Project
+subtitle: Developing Course Project
 ---
 
 
 ## Introduction
 
-This presentation is part of the Developing Data Products Coursera.org course project submission.
+This is a part of the Developing Data Products coursera.org course project submission.
 
-It is an R Presentation generated with RStudio.
+The presentation is an R presentation generated with RStudio.
 
-The Shiny application pitched by this presentation is at https://halici.shinyapps.io/Gapminder-Data-Visualization-using-Shiny-and-Plotly/
+The Shiny app source code is available at https://github.com/boukdir1/Assignment-Week-4-Shiny-Application-and-Reproducible-Pitch/tree/master/Shiny
 
-The Shiny app source code is available at https://github.com/nihathalici/Developing-Data-Products-course--Assignment-Week-4-Shiny-Application-and-Reproducible-Pitch/tree/master/Shiny 
-
-
-## Application Overview
+## Application Intro
 
 - The application is written in Shiny which is a web application framework for R
 - The source code consists of two files: server.R and ui.R
@@ -33,7 +30,7 @@ The Shiny app source code is available at https://github.com/nihathalici/Develop
 - ui.R includes the the user-interface definition, which uses the sidebarLayout template
 - The application is hosted on Rstudio's shiny server in the cloud (Shinyapps.io)
 
-## How it works? - I | The Application contains: Left Panel
+## How it works? - 1 | The Application contains: Left Panel
 
 - Label the main titel using a textInput
 - Change/determine the size of the plot points using a numericInput
@@ -42,7 +39,7 @@ The Shiny app source code is available at https://github.com/nihathalici/Develop
 - Select data options using selectInput and sliderInput
 - download filtered data using a downloadButton
 
-## How it works? - II | The Application contains: Main Panel
+## How it works? - 2 | The Application contains: Main Panel
 
 There are two tabs in main panel as below:
 
@@ -51,10 +48,3 @@ There are two tabs in main panel as below:
 
 ![](gapminder_using_shiny_1.png)
 
-## Ready to give it a try?
-
-Use the Shiny app at https://halici.shinyapps.io/Gapminder-Data-Visualization-using-Shiny-and-Plotly/ 
-
-Get the app source code at https://github.com/nihathalici/Developing-Data-Products-course--Assignment-Week-4-Shiny-Application-and-Reproducible-Pitch
-
-![](gapminder_using_shiny_2.png)
